# vigilance-CybATI

./: .dockerignore  AGENTS.md  Dockerfile  README.md  app.py  docker-compose.yml  dotenv.py  pyproject.toml
docs/: assets-schema.md
schema/: assets_schema.json
src/vigilance_assets/: __init__.py  api.py  auth.py  blueprints.py  config.py  google_sheets.py  infrastructure.py  jwt_validation.py  models.py  openapi.py  repository.py  runtime.py  schema.py  service.py  sharepoint.py  spreadsheet.py  swagger_oauth.py  token_acquisition.py  validation.py  wsgi.py
src/vigilance_assets/resources/: assets_schema.json
tests/: conftest.py  fixtures.py  test_api.py  test_api_auth.py  test_app_entry.py  test_auth.py  test_config.py  test_google_sheets.py  test_models.py  test_repository.py  test_schema_resource.py  test_service.py  test_sharepoint.py  test_spreadsheet_repository.py  test_startup.py  test_validation.py
tests/scripts/: test_script_all_apis.py
