[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilance-assets"
version = "0.1.0"
description = "Internal domain models and validators for the VIGILANCE asset inventory service"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1,<4",
    "swagger-ui-bundle>=1.1.0,<2",
    "google-api-python-client>=2.169,<3",
    "google-auth>=2.40,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
