[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilance-assets"
version = "0.1.0"
description = "Internal domain models and validators for the VIGILANCE asset inventory service"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1,<4",
    "swagger-ui-bundle>=1.1.0,<2",
    "python-dotenv>=1.0,<2",
    "google-api-python-client>=2.0,<3",
    "google-auth>=2.0,<3",
    "msal>=1.31,<2",
    "PyJWT[crypto]>=2.10,<3",
]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vigilance_assets = ["resources/*.json"]
